--- a/wall_clock.html
+++ b/wall_clock.html
@@ -13,7 +13,7 @@ html, body {
 }
 
 body {
-  background: #666666;
+  background:#b4b4b4;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -21,7 +21,7 @@ body {
 
 .clock {
   height: 8vh;
-  color: red;
+  color: #6a5acd;
   font-size: 8vh;
   font-family: sans-serif;
   line-height: 8vh;
